--- a/src/main/resources/public/admin/index.html
+++ b/src/main/resources/public/admin/index.html
@@ -10,7 +10,7 @@
     <p>Fungerer absolutt best i chrome. ;) </p>
 
     <h2>Statuser</h2>
-    <div class="taskStatus table" style="max-width: 30rem; grid-template-columns: repeat(2, 1fr)">
+    <div class="status table" style="max-width: 30rem; grid-template-columns: repeat(2, 1fr)">
     </div>
 
     <div class="force">
